--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 /* selector */
 body {
 	/* property */ /* value */
-	background-color: darkgreen;
+	background-image: url("Klunkrekrigere logo.png")
 }
 
 * {
