--- a/style.css
+++ b/style.css
@@ -24,7 +24,9 @@ body {
 	margin: 250px; 
 	padding: 100px; 
 	top: 0px;
-	
+	right: 300px;
+	position: absolute;
+		/* fixed/sticky/relative/absolute/static */ 
 	
 	
 	color: red;
@@ -38,7 +40,9 @@ body {
 }
 
 #blue {
-	color: blue;
+	color: #8F2B2D;
+	/* navn, hex(#), rgb(rgba())*/
+	display: inline;
 }
 
 ul li {
