--- a/style.css
+++ b/style.css
@@ -66,8 +66,12 @@ font-style: normal;
 	animation-name: test;
 	position: relative;
 	animation-duration: 4s;
-	animation-delay: 2s;
+	animation-delay: 1s;
 	animation-iteration-count: 3;
+	animation-direction: normal
+		/*normal, reverse, alternate, alternate-reverse*/
+	animation-timing-function: ease
+		/*ease, linear, ease-in, ease-out, ease-in-out*/
 	
 }
 
@@ -77,8 +81,10 @@ font-style: normal;
 }
 
 @keyframes test {
-	0% { background-color: black;}
-	50% { background-color: blue;}
-	100% { background-color: black;}
+	0% { background-color: black; left: 0px; top: 0px; scale: 1;}
+	25% { background-color: red; left: 200px; top: 0px; scale: 1;}
+	50% { background-color: blue; left: 200px; top: 200px; scale: 2;}
+	75% { background-color: red; left: 0px; top: 200px; scale: 1;}
+	100% { background-color: black; left: 0px; top: 0px; scale: 1;}
 }
 
