--- a/res_style.css
+++ b/res_style.css
@@ -9,17 +9,23 @@
 
 .b {
 	background-color: blue;
-	width: 500px;
+	width: 50%;
 	height: 50px;
 }
  .c {
 	background-color: yellow;
-	width: 500px;
+	max-width: 500px;
 	height: 50px;
 }
 
 .d {
 	background-color: black;
-	width: 500px;
+	min-width: 500px;
 	height: 50px;
+}
+
+@media screen and (max-width: 500px) {
+	.a, .b, .c, .d {
+		background-color: gray;
+	}
 }
