--- a/res_style.css
+++ b/res_style.css
@@ -26,6 +26,7 @@
 
 @media screen and (max-width: 500px) {
 	.a, .b, .c, .d {
-		background-color: gray;
+		width: 100px;
+		display: inline-block;
 	}
 }
