--- a/res_style.css
+++ b/res_style.css
@@ -1,6 +1,24 @@
 @charset "utf-8";
 /* CSS Document */
 
+p {
+	background-color: lightgreen;
+	font-size: 25px;
+	margin: 10px;
+	width: 200px;
+	text-align: center;
+}
+
+.flexbox {
+	background-color: darkgreen;
+	display: flex;
+	flex-flow: wrap;
+	justify-content: space-between;
+	align-items: flex-end;
+	
+}
+
+
 .a {
 	background-color: red;
 	width: 500px;
@@ -28,5 +46,18 @@
 	.a, .b, .c, .d {
 		width: 100px;
 		display: inline-block;
+		min-width: 150px;
+	}
+	
+	.a {
+		display: none;
+	}
+	
+	.flexbox {
+		flex-direction: column;
+	}
+	
+	body {
+		background-color: lightblue;
 	}
 }
