--- a/res_style.css
+++ b/res_style.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 
-p {
+.flexbox p {
 	background-color: lightgreen;
 	font-size: 25px;
 	margin: 10px;
@@ -16,6 +16,25 @@ p {
 	justify-content: space-between;
 	align-items: flex-end;
 	
+}
+
+p {
+	background-color: lightgreen;
+	font-size: 25px;
+	margin: 10px;
+	text-align: center;
+}
+
+.grid-a { 
+	grid-area: 1 / 1 / 3 / 3;
+}
+
+.grid {
+	display: inline-grid;
+	background-color: rosybrown;
+	grid-template-columns: 300px 300px 100px;
+	/* fractions (fr) */
+	grid-template-rows: 100px 100px;
 }
 
 
