--- a/res_style.css
+++ b/res_style.css
@@ -22,11 +22,14 @@ p {
 	background-color: lightgreen;
 	font-size: 25px;
 	margin: 10px;
+	/* gap: 100px */
 	text-align: center;
 }
 
-.grid-a { 
+.grad-a { 
 	grid-area: 1 / 1 / 3 / 3;
+	/* grid-column: 1 / span 3;
+	grid-row: 1 / 5; */
 }
 
 .grid {
